in progress part two

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h1 id="title">Web Calculator</h1>
         <h4 id="instructions">Add ANY two numbers, below:</h4>
         <input type="number" id="input1">
-        <span id="plus"> + </span>
+        <input type="button" value="+" id="operation" onclick="chooseOperation()">
         <input type="number" id="input2">
         <input type="submit" value="=" id="submitButton" onclick="addNumbers()">
         <input type="submit" value="clear" id="clearButton" onclick="clearAll()">
         <div id="results"></div>
         <div id="footer"></div>
     </div>
-</body>
+</body> 
 </html>
