--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <div class="container">
         <h1 id="title">Web Calculator</h1>
-        <h4 id="instructions">Add ANY two numbers, below:</h4>
+        <h4 id="instructions">pick two NUMBERS, choose your OPERATOR, and send it through.</h4>
         <input type="number" id="input1">
-        <input type="button" value="+" id="operation" onclick="chooseOperation()">
+        <input type="button" value="+" id="operation" onclick="chooseOperation()"/>
         <input type="number" id="input2">
-        <input type="submit" value="=" id="submitButton" onclick="addNumbers()">
+        <input type="submit" value="=" id="submitButton" onclick="doMath()">
         <input type="submit" value="clear" id="clearButton" onclick="clearAll()">
         <div id="results"></div>
         <div id="footer"></div>
